correct hero styles to prevent overflow

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,6 +1,8 @@
 .button {
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
   border: none;
 
   font-family: $font-family-accent;
